--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row p-3">
           <h2>About</h2>
           <p>
-            IAM4CC provideS containerized Identity and Access Management (IAM) components 
+            IAM4CC provides containerized Identity and Access Management (IAM) components 
             for the computing continuum. These components enable decentralized Self-Sovereign 
             Identity management implemented using Decentralized Identifiers, and fine-grained 
             access control implemented using Verifiable Credentials and Relationship-Based 
